--- a/ios/music.xcodeproj/xcshareddata/xcschemes/music.xcscheme
+++ b/ios/music.xcodeproj/xcshareddata/xcschemes/music.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "orisa.app"
-               BlueprintName = "orisa"
-               ReferencedContainer = "container:orisa.xcodeproj">
+               BuildableName = "music.app"
+               BlueprintName = "music"
+               ReferencedContainer = "container:music.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "orisaTests.xctest"
-               BlueprintName = "orisaTests"
-               ReferencedContainer = "container:orisa.xcodeproj">
+               BuildableName = "musicTests.xctest"
+               BlueprintName = "musicTests"
+               ReferencedContainer = "container:music.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "orisa.app"
-            BlueprintName = "orisa"
-            ReferencedContainer = "container:orisa.xcodeproj">
+            BuildableName = "music.app"
+            BlueprintName = "music"
+            ReferencedContainer = "container:music.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "orisa.app"
-            BlueprintName = "orisa"
-            ReferencedContainer = "container:orisa.xcodeproj">
+            BuildableName = "music.app"
+            BlueprintName = "music"
+            ReferencedContainer = "container:music.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
