--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "orisa",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android:beta": "fastlane android beta"
   },
   "dependencies": {
     "react": "18.1.0",
