--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
+    "postinstall": "husky install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "android:beta": "fastlane android beta"
+    "android:beta": "yarn version --patch && fastlane android beta",
+    "android:release": "yarn version --major && fastlane android release"
   },
   "dependencies": {
     "react": "18.1.0",
@@ -27,6 +29,7 @@
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "husky": "^8.0.3",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
