--- a/package.json
+++ b/package.json
@@ -2,18 +2,6 @@
   "name": "orisa",
   "version": "0.0.1",
   "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/**/*.tsx": [
-      "eslint --fix",
-      "yarn version --patch",
-      "git add"
-    ]
-  },
   "scripts": {
     "postinstall": "husky install",
     "android": "react-native run-android",
@@ -23,6 +11,37 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "android:beta": "yarn version --minor && fastlane android beta",
     "android:release": "yarn version --major && fastlane android release"
+  },
+  "husky": {
+    "hooks": {
+      "applypatch-msg": "echo \"[Husky] applypatch-msg\"",
+      "pre-applypatch": "echo \"[Husky] pre-applypatch\"",
+      "post-applypatch": "echo \"[Husky] post-applypatch\"",
+      "pre-commit": "echo \"[Husky] pre-commit\"",
+      "pre-merge-commit": "echo \"[Husky] pre-merge-commit\"",
+      "prepare-commit-msg": "echo \"[Husky] prepare-commit-msg\"",
+      "commit-msg": "echo \"[Husky] commit-msg\"",
+      "post-commit": "echo \"[Husky] post-commit\"",
+      "pre-rebase": "echo \"[Husky] pre-rebase\"",
+      "post-checkout": "echo \"[Husky] post-checkout\"",
+      "post-merge": "echo \"[Husky] post-merge\"",
+      "pre-push": "echo \"[Husky] pre-push\"",
+      "pre-receive": "echo \"[Husky] pre-receive\"",
+      "update": "echo \"[Husky] update\"",
+      "post-receive": "echo \"[Husky] post-receive\"",
+      "post-update": "echo \"[Husky] post-update\"",
+      "reference-transaction": "echo \"[Husky] reference-transaction\"",
+      "push-to-checkout": "echo \"[Husky] push-to-checkout\"",
+      "pre-auto-gc": "echo \"[Husky] pre-auto-gc\"",
+      "post-rewrite": "echo \"[Husky] post-rewrite\"",
+      "sendemail-validate": "echo \"[Husky] sendemail-validate\"",
+      "fsmonitor-watchman": "echo \"[Husky] fsmonitor-watchman\"",
+      "p4-changelist": "echo \"[Husky] p4-changelist\"",
+      "p4-prepare-changelist": "echo \"[Husky] p4-prepare-changelist\"",
+      "p4-post-changelist": "echo \"[Husky] p4-post-changelist\"",
+      "p4-pre-submit": "echo \"[Husky] p4-pre-submit\"",
+      "post-index-change": "echo \"[Husky] post-index-change\""
+    }
   },
   "dependencies": {
     "react": "18.1.0",
