--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     }
   },
   "dependencies": {
+    "@klarna/react-native-vector-drawable": "^0.4.0",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-image": "^0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
