--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.7.0",
   "private": true,
   "scripts": {
-    "postinstall": "husky install",
+    "postinstall": "rn-nodeify --install fs,dgram,process,path,console,stream,crypto --hack",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -23,11 +23,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
+    "buffer": "^6.0.3",
+    "jsmediatags": "^3.9.7",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vector-image": "^0.3.3",
     "react-redux": "^8.0.5",
