--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'orisa' do
+target 'MIXØ' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -26,7 +26,7 @@ target 'orisa' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'orisaTests' do
+  target 'MIXØTests' do
     inherit! :complete
     # Pods for testing
   end
