--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Orisa",
+  "name": "MIXO",
   "version": "2.7.0",
   "private": true,
   "scripts": {
@@ -24,6 +24,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
     "buffer": "^6.0.3",
+    "expo-gl": "^12.4.0",
+    "expo-three": "^7.0.0",
+    "gsap": "^3.11.5",
     "jsmediatags": "^3.9.7",
     "react": "18.1.0",
     "react-native": "0.70.6",
@@ -37,7 +40,8 @@
     "react-redux": "^8.0.5",
     "realm": "^11.5.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
