--- a/package.json
+++ b/package.json
@@ -24,23 +24,34 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
     "buffer": "^6.0.3",
+    "console-browserify": "^1.2.0",
     "expo-gl": "^12.4.0",
     "expo-three": "^7.0.0",
     "gsap": "^3.11.5",
     "jsmediatags": "^3.9.7",
+    "path-browserify": "^0.0.0",
+    "process": "^0.11.10",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-crypto": "^2.2.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-sound": "^0.11.2",
     "react-native-track-player": "^3.2.0",
+    "react-native-udp": "tradle/react-native-udp",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vector-image": "^0.3.3",
     "react-redux": "^8.0.5",
+    "readable-stream": "^1.0.33",
     "realm": "^11.5.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "rn-nodeify": "^10.3.0",
+    "stream-browserify": "^1.0.0",
     "three": "^0.150.1"
   },
   "devDependencies": {
@@ -72,5 +83,31 @@
       "json",
       "node"
     ]
+  },
+  "react-native": {
+    "console": "console-browserify",
+    "crypto": "react-native-crypto",
+    "path": "path-browserify",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify"
+  },
+  "browser": {
+    "console": "console-browserify",
+    "crypto": "react-native-crypto",
+    "path": "path-browserify",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify"
   }
 }
