--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "2.7.0",
   "private": true,
   "scripts": {
-    "postinstall": "rn-nodeify --install fs,dgram,process,path,console,stream,crypto --hack",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "android:beta": "yarn version --minor && fastlane android beta",
-    "android:release": "yarn version --major && fastlane android release"
+    "android:release": "yarn version --major && fastlane android release",
+    "postinstall": "rn-nodeify --install buffer,stream,assert,events,crypto,vm,process --hack"
   },
   "husky": {
     "hooks": {
@@ -19,33 +19,47 @@
   },
   "dependencies": {
     "@klarna/react-native-vector-drawable": "^0.4.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@magic-sdk/react-native-bare": "^20.1.0",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
+    "@trpc/client": "^10.37.1",
+    "@trpc/react-query": "^10.7.1-alpha-next-2023-08-07-23-17-43.62",
+    "@trpc/server": "^10.37.1",
     "@walletconnect/react-native-dapp": "^1.8.0",
+    "assert": "^1.1.1",
+    "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
+    "ethers": "^6.7.0",
     "expo-gl": "^12.4.0",
     "expo-three": "^7.0.0",
     "gsap": "^3.11.5",
     "jsmediatags": "^3.9.7",
+    "node-libs-browser": "^2.2.1",
     "path-browserify": "^0.0.0",
     "process": "^0.11.10",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-crypto": "^2.2.0",
+    "react-native-device-info": "^10.8.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-randombytes": "^3.6.1",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.20.0",
     "react-native-sound": "^0.11.2",
     "react-native-track-player": "^3.2.0",
     "react-native-udp": "tradle/react-native-udp",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vector-image": "^0.3.3",
+    "react-native-webview": "^11.26.0",
     "react-redux": "^8.0.5",
     "readable-stream": "^1.0.33",
     "realm": "^11.5.1",
@@ -53,7 +67,11 @@
     "redux-persist": "^6.0.0",
     "rn-nodeify": "^10.3.0",
     "stream-browserify": "^1.0.0",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "trpc-openapi": "^1.2.0",
+    "vm-browserify": "0.0.4",
+    "web3": "^4.0.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -96,7 +114,8 @@
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
     "dgram": "react-native-udp",
-    "stream": "stream-browserify"
+    "stream": "stream-browserify",
+    "vm": "vm-browserify"
   },
   "browser": {
     "console": "console-browserify",
