--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
-// prettier-ignore
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",     /* Recommended React Native TSConfig base */
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
-    /* Completeness */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true
+  },
+  "include": ["src", "config"],
+  "exclude": [
+    "android",
+    "fastlane",
+    "ios",
+    "node_modules",
+    ".vscode",
+    "__tests__",
+    "_bundle"
+  ]
 }
