--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@klarna/react-native-vector-drawable": "^0.4.0",
     "@magic-sdk/react-native-bare": "^20.1.0",
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/blur": "^4.3.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
@@ -50,6 +51,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
